@@ -6,3 +6,4 @@ Version Modified By Date     Comments
 ------- ----------- -------- --------
 0001    B Hagman    10/03/14 Initial coding (Pi Day!)
 0002    B Hagman    10/03/21 License updates, minor fixes
+0003    B Hagman    10/04/21 Added hardset control for syncing to matrix scan lines
